force-app/main/default/objects/GeneratedWaste/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(StnryAssetEnvrSrc.AccountName.Name != &apos;&apos;, StnryAssetEnvrSrc.AccountName.Name, 
IF(Scope3EmssnSrc.AccountName.Name != &apos;&apos;, Scope3EmssnSrc.AccountName.Name,
&apos;Full Corporate&apos;
)
)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>