force-app/main/default/objects/GeneratedWaste/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <formula>IF(TEXT(StnryAssetEnvrSrc.BusinessRegion) != &apos;&apos;, TEXT(StnryAssetEnvrSrc.BusinessRegion), 
IF(TEXT(Scope3EmssnSrc.BusinessRegion) != &apos;&apos;, TEXT(Scope3EmssnSrc.BusinessRegion),
&apos;Global&apos;
)
)</formula>
    <label>Business Region</label>
    <type>Text</type>
</CustomField>