force-app/main/default/objects/GeneratedWaste/fields/Emissions_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Emissions_Source_Name__c</fullName>
    <formula>IF(StnryAssetEnvrSrc.Name != &apos;&apos;, StnryAssetEnvrSrc.Name, Scope3EmssnSrc.Name)</formula>
    <label>Emissions Source Name</label>
    <type>Text</type>
</CustomField>